final prep for super-early-alpha release

--- a/README.pod
+++ b/README.pod
@@ -8,6 +8,30 @@ PerlX::bash - tighter integration between Perl and bash
 
 This document describes version 0.01 of PerlX::bash.
 
+=head1 SYNOPSIS
+
+	# put all instances of Firefox to sleep
+	foreach (bash \lines => "pgrep firefox")
+	{
+		bash "kill -STOP $_" or die("can't spawn `kill`!");
+	}
+
+	# count lines in $file
+	local $@;
+	eval { bash \string => -e => "wc -l $file" };
+	die("can't spawn `wc`!") if $@;
+
+	# can capture actual exit status
+	my $status = bash "grep -e $pattern $file >$tmpfile";
+	die("`grep` had an error!") if $status == 2;
+
+=head1 STATUS
+
+This module is an experiment.  It's fun to play around with, and I welcome suggestions and
+contributions.  However, don't rely on this in production code (yet).
+
+Further documentation will be forthcoming, hopefully soon.
+
 =for :stopwords cpan testmatrix url annocpan anno bugtracker rt cpants kwalitee diff irc mailto metadata placeholders metacpan
 
 =head1 SUPPORT
@@ -20,12 +44,12 @@ You can find documentation for this module with the perldoc command.
 
 =head2 Bugs / Feature Requests
 
-		This module is on GitHub.  Feel free to fork and submit patches.  Please note that I develop
-		via TDD (Test-Driven Development), so a patch that includes a failing test is much more
-		likely to get accepted (or least likely to get accepted more quickly).
+This module is on GitHub.  Feel free to fork and submit patches.  Please note that I develop
+via TDD (Test-Driven Development), so a patch that includes a failing test is much more
+likely to get accepted (or at least likely to get accepted more quickly).
 
-		If you just want to report a problem or suggest a feature, that's okay too.  You can create
-		an issue on GitHub here: L<http://github.com/me/perlx-bash/issues>.
+If you just want to report a problem or suggest a feature, that's okay too.  You can create
+an issue on GitHub here: L<http://github.com/barefootcoder/perlx-bash/issues>.
 
 =head2 Source Code
 
@@ -40,7 +64,7 @@ Buddy Burden <barefootcoder@gmail.com>
 
 =head1 COPYRIGHT AND LICENSE
 
-This software is Copyright (c) 2015 by Buddy Burden.
+This software is Copyright (c) 2015-2017 by Buddy Burden.
 
 This is free software, licensed under:
 
